[workspace]
resolver = "2"

members = ["core/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.91.0"
authors = ["zhwaaaaaa"]
repository = "https://github.com/fiber-net-gateway/fiber-gateway"
license = "Unlicense OR MIT"
description = "A gateway framework"

[workspace.dependencies]

# Repo Crates
fiber_json = { version = "~0.1.0", path = "core/json" }