[package]
name = "fiber_script"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
fiber_json.workspace = true
fiber_string.workspace = true
indexmap.workspace = true
async-trait = "0.1.89"

[lints]
workspace = true
